--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SpaDES.shiny
 Type: Package
 Title: Utilities for building 'shiny' apps for 'SpaDES' simulations
-Description: TO DO.
+Description: Create 'shiny' app interfaces for 'SpaDES' models.
 URL:
     http://spades.predictiveecology.org,
     https://github.com/PredictiveEcology/SpaDES.shiny
-Date: 2017-06-28
+Date: 2017-07-07
 Version: 0.1.0
 Authors@R: c(
     person(c("Alex", "M"), "Chubaty", email = "alexander.chubaty@canada.ca",
@@ -17,27 +17,36 @@ Authors@R: c(
     )
 Additional_repositories: http://rforge.net
 Depends:
-    R (>= 3.3.2),
-    quickPlot,
-    SpaDES (>= 1.3.1.9200)
+    R (>= 3.3.2)
 Imports:
     DiagrammeR (>= 0.8.2),
     DT (>= 0.2),
     grDevices,
+    magrittr,
+    methods,
+    quickPlot,
+    reproducible,
     shiny (>= 0.13),
+    SpaDES.core,
     stringi (>= 1.1.3),
     utils
 Suggests:
     hunspell,
     knitr,
+    rmarkdown,
+    SpaDES.tools,
     testthat (>= 1.0.2)
 Remotes:
+    PredictiveEcology/reproducible,
     PredictiveEcology/quickPlot,
-    PredictiveEcology/SpaDES@development,
+    PredictiveEcology/SpaDES.core,
+    PredictiveEcology/SpaDES.tools
 License: GPL-3
 VignetteBuilder: knitr, rmarkdown
 BugReports: https://github.com/PredictiveEcology/SpaDES.shiny/issues
 ByteCompile: yes
 Collate: 
-    'zzz.R'
+    'environment.R'
+    'shine.R'
+    'spades-shiny-package.R'
 RoxygenNote: 6.0.1
