--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ importFrom(SpaDES.core,objs)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
-importFrom(SpaDES.core,time)
 importFrom(grDevices,dev.cur)
 importFrom(magrittr,"%>%")
 importFrom(quickPlot,clearPlot)
@@ -57,4 +56,5 @@ importFrom(shiny,titlePanel)
 importFrom(shiny,uiOutput)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,updateTabsetPanel)
+importFrom(stats,time)
 importFrom(utils,browseURL)
