--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(adminLogs)
 export(adminLogsUI)
+export(cloneApp)
 export(copyrightAuthors)
 export(copyrightAuthorsUI)
 export(copyrightFooter)
@@ -11,15 +12,19 @@ export(debugging)
 export(debuggingUI)
 export(initialMap)
 export(initialMapUI)
+export(libInit)
 export(moduleInfo)
 export(moduleInfoUI)
 export(moduleParams)
 export(moduleParamsUI)
+export(newApp)
+export(newConfig)
 export(pkgAuthors)
 export(pkgDeps)
 export(pkgInformation)
 export(pkgInformationUI)
 export(pkgVers)
+export(readConfig)
 export(shine)
 export(sidebarFooter)
 export(simEventDiagram)
@@ -33,12 +38,15 @@ export(simObjectDiagram)
 export(simObjectDiagramUI)
 export(simOutputs)
 export(simOutputsUI)
+export(updateConfig)
+export(writeConfig)
 exportMethods(shine)
 import(methods)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(DiagrammeR,DiagrammeROutput)
 importFrom(DiagrammeR,renderDiagrammeR)
+importFrom(R.utils,isAbsolutePath)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(SpaDES.core,"end<-")
 importFrom(SpaDES.core,"params<-")
@@ -125,6 +133,9 @@ importFrom(tools,package_dependencies)
 importFrom(utils,as.person)
 importFrom(utils,as.personList)
 importFrom(utils,browseURL)
+importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(yaml,as.yaml)
+importFrom(yaml,yaml.load_file)
