--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,15 @@ URL:
 Date: 2017-08-25
 Version: 0.1.0
 Authors@R: c(
-    person("Alex M", "Chubaty", email = "alexander.chubaty@canada.ca",
-    role = c("aut", "cre")),
-    person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
-    role = c("aut")),
-    person("Her Majesty the Queen in Right of Canada, as represented by the Minister of Natural Resources Canada",
-    role = "cph")
+      person("Alex M", "Chubaty", email = "alexander.chubaty@canada.ca",
+             role = c("aut", "cre")),
+      person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
+             role = c("aut")),
+      person("Olivia", "Sung", role = c("ctb")),
+      person("Alex", "Tso", role = c("ctb")),
+      person("Greyson", "Wang", role = c("ctb")),
+      person("Her Majesty the Queen in Right of Canada, as represented by the Minister of Natural Resources Canada",
+            role = "cph")
     )
 Additional_repositories: http://rforge.net
 Depends:
