--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,9 @@
-# Sample .travis.yml for R projects.
-#
-# See README.md for instructions, or for more configuration options,
-# see the wiki:
-#   https://github.com/craigcitro/r-travis/wiki
-
 sudo: required
-
 language: r
-
 cache: packages
-
 cran: https://cran.rstudio.com/
-
 matrix:
   include:
-
   - os: linux
     dist: trusty
     r: oldrel
@@ -23,10 +12,11 @@ matrix:
         packages:
           - libgdal1-dev
           - libproj-dev
+    before_script:
+    - Rscript -e 'install.packages("https://cran.rstudio.com/src/contrib/Archive/DiagrammeR/DiagrammeR_0.9.0.tar.gz", repos = NULL)'
     before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
-
   - os: linux
     dist: trusty
     r: release
@@ -40,12 +30,9 @@ matrix:
     before_install:
       - export DISPLAY=:99.0
       - sh -e /etc/init.d/xvfb start
-      - Rscript -e 'install.packages("dplyr", dependencies = TRUE)'
     after_success:
-      - ./_push_vignettes.sh
-      - Rscript -e 'library(covr); coveralls(coverage = print(package_coverage(quiet = FALSE)))'
-      - Rscript -e 'library(lintr); lint_package()'
-
+    - Rscript -e 'covr::coveralls(package_coverage(type = "all", quiet = FALSE)))'
+    - Rscript -e 'lintr::lint_package()'
   - os: linux
     dist: trusty
     r: devel
@@ -57,8 +44,6 @@ matrix:
     before_install:
       - export DISPLAY=:99.0
       - sh -e /etc/init.d/xvfb start
-      - Rscript -e 'install.packages("dplyr", dependencies = TRUE)'
-
   - os: osx
     osx_image: xcode8.2
     latex: false
@@ -66,21 +51,15 @@ matrix:
     r_check_args: '--as-cran --ignore-vignettes --no-examples'
     before_script:
       - Rscript -e "install.packages('rgdal', type = 'source')"
-
 r_build_args: " "
-
 r_check_args: "--as-cran"
-
 warnings_are_errors: true
-
 notifications:
   email:
     on_success: change
     on_failure: change
-
 branches:
   only:
     - master
     - development
     - testing
-
