--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,9 @@ Type: Package
 Title: Utilities for building 'shiny' apps for 'SpaDES' simulations
 Description: Create 'shiny' app interfaces for 'SpaDES' models.
 URL:
-    https://predictiveecology.github.io/SpaDES.shiny/,
+    http://spades.shiny.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.shiny
-Date: 2017-08-25
+Date: 2017-09.01
 Version: 0.1.0
 Authors@R: c(
       person("Alex M", "Chubaty", email = "alexander.chubaty@canada.ca",
