--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(simObjectDiagram)
 export(simObjectDiagramUI)
 export(simOutputs)
 export(simOutputsUI)
+export(slider)
+export(sliderUI)
 export(updateConfig)
 export(writeConfig)
 exportMethods(shine)
