--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,7 +60,9 @@ Collate:
     'copyrightAuthors.R'
     'debugging.R'
     'environment.R'
+    'export.R'
     'footers.R'
+    'generator.R'
     'libInit.R'
     'pkgInfo.R'
     'shine.R'
