--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(moduleInfoUI)
 export(moduleParams)
 export(moduleParamsUI)
 export(newApp)
+export(newAppDeprecated)
 export(newConfig)
 export(pkgAuthors)
 export(pkgDeps)
@@ -137,5 +138,6 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(whisker,whisker.render)
 importFrom(yaml,as.yaml)
 importFrom(yaml,yaml.load_file)
