Change email address for development purposes.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -78,7 +78,7 @@ artifacts:
 notifications:
  - provider: Email
    to:
-     - alex.chubaty@gmail.com
+     - damian@appsilondatascience.com
    subject: 'SpaDES.shiny: r-appveyor build {{status}}'
    message: "https://ci.appveyor.com/project/achubaty/SpaDES-shiny"
    on_build_success: false
