--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(simOutputs)
 export(simOutputsUI)
 export(slider)
 export(sliderUI)
+export(tilesUpdater)
 export(updateConfig)
 export(writeConfig)
 exportMethods(shine)
@@ -69,6 +70,9 @@ importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,plot)
+importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addTiles)
+importFrom(leaflet,clearGroup)
 importFrom(magrittr,"%>%")
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
