--- a/inst/templates/ui.R.template
+++ b/inst/templates/ui.R.template
@@ -7,14 +7,12 @@ dashboardPage(skin = "green",
               dashboardSidebar(width = 300,
                                sidebarMenu(id = "wholeThing",
                                            h4(HTML("&nbsp;"), "Maps"),
-                                           menuItem("Module Info", tabName = "moduleInfo", icon = icon("puzzle-piece")),
-                                           {{menu_items}}
+                                           {{{menuItems}}}
                                )
               ),
               dashboardBody(
                 tabItems(
-                  tabItem("moduleInfo", "{{content}}"),
-                  {{tab_items}}
+                  {{{tabItems}}}
                 )
               )
 )
