--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(simOutputsUI)
 export(slider)
 export(sliderUI)
 export(tilesUpdater)
+export(timeSinceFire)
+export(timeSinceFireUI)
 export(updateConfig)
 export(writeConfig)
 exportMethods(shine)
