--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(dataInfo)
 export(dataInfoUI)
 export(debugging)
 export(debuggingUI)
+export(histogramForRaster)
+export(histogramForRasterUI)
 export(initialMap)
 export(initialMapUI)
 export(libInit)
