--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Collate:
     'export.R'
     'footers.R'
     'generator.R'
+    'histogramForRaster.R'
     'libInit.R'
     'pkgInfo.R'
     'shine.R'
