Add parameters to timeSinceFire module.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Imports:
     DT (>= 0.2),
     graphics,
     grDevices,
+    leaflet,
     magrittr,
     methods,
     packrat,
@@ -35,6 +36,7 @@ Imports:
     reproducible,
     shiny (>= 0.13),
     shinyBS,
+    shinycssloaders,
     shinydashboard,
     SpaDES.core,
     stringi (>= 1.1.3),
