--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,16 +26,20 @@ Imports:
     DT (>= 0.2),
     graphics,
     grDevices,
+    leaflet,
     magrittr,
     methods,
     packrat,
     quickPlot,
     R.utils,
     RColorBrewer,
+    raster,
     reproducible,
     shiny (>= 0.13),
     shinyBS,
+    shinycssloaders,
     shinydashboard,
+    sp,
     SpaDES.core,
     stringi (>= 1.1.3),
     stringr,
