--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,25 +67,63 @@ importFrom(SpaDES.core,modulePath)
 importFrom(SpaDES.core,modules)
 importFrom(SpaDES.core,objectDiagram)
 importFrom(SpaDES.core,objs)
+importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
+importFrom(graphics,hist)
 importFrom(graphics,plot)
+importFrom(leaflet,JS)
+importFrom(leaflet,addEasyButton)
 importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addLegend)
+importFrom(leaflet,addMeasure)
+importFrom(leaflet,addMiniMap)
+importFrom(leaflet,addPolygons)
+importFrom(leaflet,addPopups)
+importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
+importFrom(leaflet,clearPopups)
+importFrom(leaflet,colorFactor)
+importFrom(leaflet,easyButton)
+importFrom(leaflet,layersControlOptions)
+importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOptions)
+importFrom(leaflet,leafletOutput)
+importFrom(leaflet,leafletProxy)
+importFrom(leaflet,providerTileOptions)
+importFrom(leaflet,renderLeaflet)
+importFrom(leaflet,setView)
+importFrom(leaflet,tileOptions)
 importFrom(magrittr,"%>%")
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
+importFrom(raster,cellFromXY)
+importFrom(raster,crs)
+importFrom(raster,extract)
+importFrom(raster,filename)
+importFrom(raster,maxValue)
+importFrom(raster,ncell)
+importFrom(raster,rowColFromCell)
+importFrom(raster,xmax)
+importFrom(raster,xmin)
+importFrom(raster,ymax)
+importFrom(raster,ymin)
+importFrom(reproducible,Cache)
+importFrom(reproducible,asPath)
 importFrom(reproducible,checkPath)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
 importFrom(shiny,a)
 importFrom(shiny,actionButton)
 importFrom(shiny,actionLink)
+importFrom(shiny,animationOptions)
 importFrom(shiny,br)
 importFrom(shiny,callModule)
 importFrom(shiny,checkboxInput)
@@ -109,6 +147,7 @@ importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
 importFrom(shiny,p)
 importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
 importFrom(shiny,reactiveFileReader)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
@@ -134,8 +173,11 @@ importFrom(shiny,updateTabsetPanel)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
 importFrom(shinyBS,bsModal)
+importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
+importFrom(sp,SpatialPoints)
+importFrom(sp,spTransform)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
 importFrom(tools,package_dependencies)
