--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'generator.R'
     'libInit.R'
     'pkgInfo.R'
+    'polygonsUpdater.R'
     'shine.R'
     'simInfo.R'
     'simOutputs.R'
