--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(pkgDeps)
 export(pkgInformation)
 export(pkgInformationUI)
 export(pkgVers)
+export(polygonsUpdater)
 export(readConfig)
 export(shine)
 export(sidebarFooter)
@@ -73,6 +74,7 @@ importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,plot)
 importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addPolygons)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
 importFrom(magrittr,"%>%")
