Render callModule, menuItem and tabItem parts.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,8 @@ importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,plot)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map)
+importFrom(purrr,pmap)
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
