--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(graphics,plot)
 importFrom(leaflet,addLayersControl)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
+importFrom(leaflet,leafletOutput)
 importFrom(magrittr,"%>%")
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
@@ -134,6 +135,7 @@ importFrom(shiny,updateTabsetPanel)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
 importFrom(shinyBS,bsModal)
+importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
 importFrom(stats,time)
