--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Imports:
     reproducible,
     shiny (>= 0.13),
     shinyBS,
+    shinycssloaders,
     shinydashboard,
     SpaDES.core,
     stringi (>= 1.1.3),
