--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
+importFrom(graphics,axis)
+importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(leaflet,addLayersControl)
 importFrom(leaflet,addTiles)
@@ -82,6 +84,8 @@ importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
+importFrom(raster,hist)
+importFrom(raster,maxValue)
 importFrom(reproducible,checkPath)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
@@ -136,6 +140,7 @@ importFrom(shiny,updateTabsetPanel)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
 importFrom(shinyBS,bsModal)
+importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
 importFrom(stats,time)
