declare imports in 'generator.R'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
+importFrom(dplyr,filter)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -185,6 +186,7 @@ importFrom(tools,package_dependencies)
 importFrom(utils,as.person)
 importFrom(utils,as.personList)
 importFrom(utils,browseURL)
+importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDescription)
