--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,6 +46,7 @@ branches:
 clone_depth: 5
 
 build_script:
+  - Rscript -e "install.packages('testthat', repos = 'https://cran.rstudio.com', type = 'source')"
   - travis-tool.sh install_deps
 
 test_script:
