--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(simOutputs)
 export(simOutputsUI)
 export(slider)
 export(sliderUI)
+export(summaryPopups)
 export(tilesUpdater)
 export(timeSinceFire)
 export(timeSinceFireUI)
@@ -73,13 +74,17 @@ importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,plot)
 importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addPopups)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
+importFrom(leaflet,clearPopups)
 importFrom(magrittr,"%>%")
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
+importFrom(raster,crs)
+importFrom(raster,extract)
 importFrom(reproducible,checkPath)
 importFrom(shiny,HTML)
 importFrom(shiny,NS)
@@ -136,6 +141,7 @@ importFrom(shiny,wellPanel)
 importFrom(shinyBS,bsModal)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
+importFrom(sp,SpatialPoints)
 importFrom(stats,time)
 importFrom(stringr,str_trim)
 importFrom(tools,package_dependencies)
