--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,10 +72,21 @@ importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,plot)
+importFrom(leaflet,addEasyButton)
 importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addLegend)
+importFrom(leaflet,addMeasure)
+importFrom(leaflet,addMiniMap)
+importFrom(leaflet,addPolygons)
+importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
+importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOutput)
+importFrom(leaflet,leafletProxy)
+importFrom(leaflet,renderLeaflet)
+importFrom(leaflet,setView)
+importFrom(leaflet,tileOptions)
 importFrom(magrittr,"%>%")
 importFrom(purrr,pmap)
 importFrom(quickPlot,"setColors<-")
@@ -88,6 +99,7 @@ importFrom(shiny,NS)
 importFrom(shiny,a)
 importFrom(shiny,actionButton)
 importFrom(shiny,actionLink)
+importFrom(shiny,animationOptions)
 importFrom(shiny,br)
 importFrom(shiny,callModule)
 importFrom(shiny,checkboxInput)
@@ -111,6 +123,7 @@ importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
 importFrom(shiny,p)
 importFrom(shiny,plotOutput)
+importFrom(shiny,reactive)
 importFrom(shiny,reactiveFileReader)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
