Time since fire with histogram module (#55)
* Added shiny module which creates histogram of data contained in a raster
* Updated `timeSinceFire` module in such a way that it uses histogram module
* Applied Roxygen
* Added imports and joined help pages of server and UI functions
* Got rid of dependencies on global variables.
* Updated documentation
* Allowed user to determine how the histogram plot UI looks and updated necessary documentation.
* Improved code readability.
* Reduced code complexity. No repetition.
* Expanded parameter scale description. Updated manuals.
* Changed the order of arguments. The ones with default value set are last.
* Added return to description.
* resolve documentation errors + delint

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,6 +68,7 @@ Collate:
     'export.R'
     'footers.R'
     'generator.R'
+    'histogramForRaster.R'
     'libInit.R'
     'pkgInfo.R'
     'polygonsUpdater.R'
