--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(simObjectDiagram)
 export(simObjectDiagramUI)
 export(simOutputs)
 export(simOutputsUI)
+export(slicer)
+export(slicerUI)
 export(slider)
 export(sliderUI)
 export(summaryPopups)
@@ -75,6 +77,7 @@ importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
+importFrom(data.table,data.table)
 importFrom(dplyr,filter)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
@@ -104,6 +107,7 @@ importFrom(leaflet,renderLeaflet)
 importFrom(leaflet,setView)
 importFrom(leaflet,tileOptions)
 importFrom(magrittr,"%>%")
+importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(quickPlot,"setColors<-")
 importFrom(quickPlot,Plot)
