--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ export(dataInfo)
 export(dataInfoUI)
 export(debugging)
 export(debuggingUI)
+export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
+export(histogramUI)
 export(initialMap)
 export(initialMapUI)
 export(libInit)
