--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(histogramForRasterUI)
 export(histogramUI)
 export(initialMap)
 export(initialMapUI)
+export(largePatches)
+export(largePatchesUI)
 export(libInit)
 export(moduleInfo)
 export(moduleInfoUI)
@@ -84,6 +86,7 @@ importFrom(dplyr,filter)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
+importFrom(graphics,hist)
 importFrom(graphics,plot)
 importFrom(leaflet,JS)
 importFrom(leaflet,addEasyButton)
