--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(dataInfo)
 export(dataInfoUI)
 export(debugging)
 export(debuggingUI)
+export(displayDataTable)
+export(displayDataTableUI)
 export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
