--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(pkgInformation)
 export(pkgInformationUI)
 export(pkgVers)
 export(polygonsUpdater)
+export(rasterUpdater)
 export(readConfig)
 export(shine)
 export(sidebarFooter)
@@ -94,6 +95,7 @@ importFrom(leaflet,addMiniMap)
 importFrom(leaflet,addPolygons)
 importFrom(leaflet,addPopups)
 importFrom(leaflet,addProviderTiles)
+importFrom(leaflet,addRasterImage)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,clearGroup)
 importFrom(leaflet,clearPopups)
