--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(debugging)
 export(debuggingUI)
 export(displayDataTable)
 export(displayDataTableUI)
+export(gdal2Tiles)
 export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
@@ -83,6 +84,8 @@ importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(data.table,data.table)
 importFrom(dplyr,filter)
+importFrom(gdalUtils,gdal_translate)
+importFrom(gdalUtils,gdaldem)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
