--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,8 @@ export(pkgInformation)
 export(pkgInformationUI)
 export(pkgVers)
 export(polygonsUpdater)
+export(rastersOverTime)
+export(rastersOverTimeUI)
 export(readConfig)
 export(shine)
 export(sidebarFooter)
