--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ export(tilesUpdater)
 export(timeSinceFire)
 export(timeSinceFireUI)
 export(updateConfig)
+export(visualizeRaster)
+export(visualizeRasterUI)
 export(writeConfig)
 exportMethods(shine)
 import(methods)
@@ -129,6 +131,7 @@ importFrom(raster,xmax)
 importFrom(raster,xmin)
 importFrom(raster,ymax)
 importFrom(raster,ymin)
+importFrom(rasterVis,levelplot)
 importFrom(reproducible,Cache)
 importFrom(reproducible,asPath)
 importFrom(reproducible,checkPath)
