--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,6 +37,7 @@ Imports:
     R.utils,
     RColorBrewer,
     raster,
+    rasterVis,
     reproducible,
     shiny (>= 0.13),
     shinyBS,
@@ -84,4 +85,5 @@ Collate:
     'summaryPopups.R'
     'tilesUpdater.R'
     'timeSinceFire.R'
+    'visualizeRaster.R'
 RoxygenNote: 6.0.1
