--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,7 +65,6 @@ Collate:
     'config.R'
     'copyrightAuthors.R'
     'debugging.R'
-    'displayDataTable.R'
     'environment.R'
     'export.R'
     'footers.R'
@@ -84,4 +83,5 @@ Collate:
     'summaryPopups.R'
     'tilesUpdater.R'
     'timeSinceFire.R'
+    'visualizeDataTable.R'
 RoxygenNote: 6.0.1
