--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,6 @@ export(dataInfo)
 export(dataInfoUI)
 export(debugging)
 export(debuggingUI)
-export(displayDataTable)
-export(displayDataTableUI)
 export(histogram)
 export(histogramForRaster)
 export(histogramForRasterUI)
@@ -55,6 +53,8 @@ export(tilesUpdater)
 export(timeSinceFire)
 export(timeSinceFireUI)
 export(updateConfig)
+export(visualizeDataTable)
+export(visualizeDataTableUI)
 export(writeConfig)
 exportMethods(shine)
 import(methods)
@@ -154,6 +154,7 @@ importFrom(shiny,hr)
 importFrom(shiny,imageOutput)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,invalidateLater)
+importFrom(shiny,is.reactive)
 importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
 importFrom(shiny,numericInput)
