--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ export(tilesUpdater)
 export(timeSinceFire)
 export(timeSinceFireUI)
 export(updateConfig)
+export(visualizePolygons)
+export(visualizePolygonsUI)
 export(writeConfig)
 exportMethods(shine)
 import(methods)
@@ -154,6 +156,7 @@ importFrom(shiny,hr)
 importFrom(shiny,imageOutput)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,invalidateLater)
+importFrom(shiny,is.reactive)
 importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
 importFrom(shiny,numericInput)
