--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(adminLogs)
 export(adminLogsUI)
 export(cloneApp)
+export(clumpMod2)
+export(clumpMod2UI)
 export(copyrightAuthors)
 export(copyrightAuthorsUI)
 export(copyrightFooter)
@@ -87,6 +89,7 @@ importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
+importFrom(archivist,addTagsRepo)
 importFrom(data.table,data.table)
 importFrom(dplyr,filter)
 importFrom(grDevices,dev.cur)
@@ -180,6 +183,7 @@ importFrom(shiny,renderUI)
 importFrom(shiny,req)
 importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
+importFrom(shiny,setProgress)
 importFrom(shiny,sidebarLayout)
 importFrom(shiny,sidebarPanel)
 importFrom(shiny,sliderInput)
@@ -195,6 +199,7 @@ importFrom(shiny,updateSliderInput)
 importFrom(shiny,updateTabsetPanel)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
+importFrom(shiny,withProgress)
 importFrom(shinyBS,bsModal)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
