R CMD Check fixes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,7 +139,9 @@ importFrom(raster,filename)
 importFrom(raster,hist)
 importFrom(raster,maxValue)
 importFrom(raster,ncell)
+importFrom(raster,res)
 importFrom(raster,rowColFromCell)
+importFrom(raster,sampleRegular)
 importFrom(raster,xmax)
 importFrom(raster,xmin)
 importFrom(raster,ymax)
