--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(dataInfo)
 export(dataInfoUI)
 export(debugging)
 export(debuggingUI)
+export(export)
+export(exportUI)
 export(gdal2Tiles)
 export(histogram)
 export(histogramForRaster)
@@ -73,6 +75,7 @@ importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(DiagrammeR,DiagrammeROutput)
 importFrom(DiagrammeR,renderDiagrammeR)
+importFrom(R.devices,devEval)
 importFrom(R.utils,isAbsolutePath)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(SpaDES.core,"end<-")
@@ -97,6 +100,7 @@ importFrom(data.table,data.table)
 importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
+importFrom(ggplot2,ggsave)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -142,6 +146,7 @@ importFrom(raster,ncell)
 importFrom(raster,res)
 importFrom(raster,rowColFromCell)
 importFrom(raster,sampleRegular)
+importFrom(raster,writeRaster)
 importFrom(raster,xmax)
 importFrom(raster,xmin)
 importFrom(raster,ymax)
@@ -224,6 +229,9 @@ importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
+importFrom(utils,write.csv)
+importFrom(utils,write.table)
 importFrom(whisker,whisker.render)
+importFrom(xlsx,write.xlsx)
 importFrom(yaml,as.yaml)
 importFrom(yaml,yaml.load_file)
