--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,7 +105,9 @@ importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
 importFrom(graphics,hist)
+importFrom(graphics,mtext)
 importFrom(graphics,plot)
+importFrom(graphics,plot.new)
 importFrom(leaflet,JS)
 importFrom(leaflet,addEasyButton)
 importFrom(leaflet,addLayersControl)
