--- a/inst/templates/ui.R.template
+++ b/inst/templates/ui.R.template
@@ -8,12 +8,20 @@ dashboardPage(skin = "green",
                                sidebarMenu(id = "wholeThing",
                                            {{{menuItems}}}
                                ),
-                               img(src = "http://d3u4jj2f3q2139.cloudfront.net/logo-appsilon-data-science-transparent.png",
-                                   style="position: absolute; bottom: 10px; margin: 25px; height: 40px; height: 70px")
-              ),
+                               HTML(paste(
+    "<footer>",
+    "<div id=\"sidebar\" style='position: absolute; bottom: 5px; margin: 15px'>",
+    " Built with ", # nolint
+    "<a href=\"http://SpaDES.PredictiveEcology.org\">  <img src=\"http://predictiveecology.org/img/avatar.png\", height=25px>SpaDES, </a>",
+    "<a href=\"http://shiny.rstudio.com/\", target=\"_blank\">shiny</a> and ",
+    "<a href=\"https://appsilondatascience.com/\">  <img src=\"http://d3u4jj2f3q2139.cloudfront.net/logo-appsilon-data-science-transparent.png\", height=20px> </a>",
+    "</div>",
+    "</footer>"
+  ))              ),
               dashboardBody(
                 tabItems(
                   {{{tabItems}}}
                 )
               )
 )
+
