allow passing additional server code to generic app
via server_file.R

--- a/inst/templates/server.R.template
+++ b/inst/templates/server.R.template
@@ -1,3 +1,7 @@
 function(input, output, session) {
+  ## run additonal server code from server_file.R
+  if (file.exists("server_file.R")) source("server_file.R")
+
+  ## module calls
   {{{callModuleDirectives}}}
 }
