fix R CMD check problems

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(SpaDES.core,"params<-")
 importFrom(SpaDES.core,"time<-")
 importFrom(SpaDES.core,completed)
 importFrom(SpaDES.core,depends)
+importFrom(SpaDES.core,end)
 importFrom(SpaDES.core,eventDiagram)
 importFrom(SpaDES.core,inputs)
 importFrom(SpaDES.core,moduleDiagram)
@@ -93,6 +94,7 @@ importFrom(SpaDES.core,objs)
 importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
 importFrom(SpaDES.core,spades)
+importFrom(SpaDES.core,start)
 importFrom(archivist,addTagsRepo)
 importFrom(data.table,data.table)
 importFrom(dplyr,filter)
