--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,4 @@
 # DO NOT CHANGE the "init" and "install" sections below
-
 # Download script file from GitHub
 init:
   ps: |
@@ -24,14 +23,14 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
-#  - R_VERSION: devel
+  - R_VERSION: devel
 
   - R_VERSION: release
 
   - R_VERSION: oldrel
     RTOOLS_VERSION: 33
 
-  - R_VERSION: 3.3.3
+  - R_VERSION: 3.3.0
     RTOOLS_VERSION: 33
 
 branches:
@@ -40,7 +39,6 @@ branches:
     - development
     - testing
     - develop
-
   except:
     - gh-pages
 
