--- a/inst/templates/ui.R.template
+++ b/inst/templates/ui.R.template
@@ -2,26 +2,20 @@ library(shiny)
 library(shinydashboard)
 library(shinyBS)
 
-dashboardPage(skin = "green",
-              dashboardHeader(title = "templateApp"),
-              dashboardSidebar(width = 300,
-                               sidebarMenu(id = "wholeThing",
-                                           {{{menuItems}}}
-                               ),
-                               HTML(paste(
-    "<footer>",
-    "<div id=\"sidebar\" style='position: absolute; bottom: 5px; margin: 15px'>",
-    " Built with ", # nolint
-    "<a href=\"http://SpaDES.PredictiveEcology.org\">  <img src=\"http://predictiveecology.org/img/avatar.png\", height=25px>SpaDES, </a>",
-    "<a href=\"http://shiny.rstudio.com/\", target=\"_blank\">shiny</a> and ",
-    "<a href=\"https://appsilondatascience.com/\">  <img src=\"http://d3u4jj2f3q2139.cloudfront.net/logo-appsilon-data-science-transparent.png\", height=20px> </a>",
-    "</div>",
-    "</footer>"
-  ))              ),
-              dashboardBody(
-                tabItems(
-                  {{{tabItems}}}
-                )
-              )
+dashboardPage(
+  skin = "green",
+  dashboardHeader(title = {{{title}}}),
+  dashboardSidebar(
+    width = 300,
+    sidebarMenu(id = "wholeThing",
+                {{{menuItems}}}
+    ),
+    sidebarFooter()
+  ),
+  dashboardBody(
+    tabItems(
+      {{{tabItems}}}
+    )
+  )
 )
 
