actual actual fix ...
with 04165cb627bc2f5e98a23c933172112cd07a3879

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ importFrom(SpaDES.core,completed)
 importFrom(SpaDES.core,depends)
 importFrom(SpaDES.core,end)
 importFrom(SpaDES.core,eventDiagram)
+importFrom(SpaDES.core,getPaths)
 importFrom(SpaDES.core,inputs)
 importFrom(SpaDES.core,moduleDiagram)
 importFrom(SpaDES.core,modulePath)
