copyrightFooter as module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(clumpMod2UI)
 export(copyrightAuthors)
 export(copyrightAuthorsUI)
 export(copyrightFooter)
+export(copyrightFooterUI)
 export(dataInfo)
 export(dataInfoUI)
 export(debugging)
@@ -177,6 +178,7 @@ importFrom(shiny,fluidRow)
 importFrom(shiny,h3)
 importFrom(shiny,h4)
 importFrom(shiny,hr)
+importFrom(shiny,icon)
 importFrom(shiny,imageOutput)
 importFrom(shiny,includeMarkdown)
 importFrom(shiny,invalidateLater)
