--- a/inst/templates/ui.R.template
+++ b/inst/templates/ui.R.template
@@ -16,7 +16,7 @@ dashboardPage(
     tabItems(
       {{{tabItems}}}
     ),
-	copyrightFooter(copyrightInfo)
+	  copyrightFooterUI("copyright")
   )
 )
 
