--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,8 +60,8 @@ export(slider)
 export(sliderUI)
 export(summaryPopups)
 export(tilesUpdater)
-export(timeSinceFire)
-export(timeSinceFireUI)
+export(timeSeriesofRasters)
+export(timeSeriesofRastersUI)
 export(updateConfig)
 export(visualizeDataTable)
 export(visualizeDataTableUI)
