--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,7 +45,7 @@ branches:
 clone_depth: 5
 
 build_script:
-  - Rscript -e "install.packages('devtools', repos = 'https://cran.rstudio.com', type = 'source')"
+  - Rscript -e "install.packages(c('devtools', 'data.table'), repos = 'https://cran.rstudio.com', type = 'source')"
   - travis-tool.sh install_deps
 
 test_script:
