sidebarFooter as module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(rastersOverTimeUI)
 export(readConfig)
 export(shine)
 export(sidebarFooter)
+export(sidebarFooterUI)
 export(simEventDiagram)
 export(simEventDiagramUI)
 export(simInfo)
