--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(adminLogs)
 export(adminLogsUI)
+export(authGoogle)
+export(authGoogleUI)
 export(cloneApp)
 export(clumpMod2)
 export(clumpMod2UI)
@@ -104,6 +106,9 @@ importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
 importFrom(ggplot2,ggsave)
+importFrom(googledrive,as_id)
+importFrom(googledrive,drive_auth)
+importFrom(googledrive,drive_deauth)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -230,6 +235,7 @@ importFrom(tools,package_dependencies)
 importFrom(utils,as.person)
 importFrom(utils,as.personList)
 importFrom(utils,browseURL)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
