--- a/NAMESPACE
+++ b/NAMESPACE
@@ -198,6 +198,7 @@ importFrom(shiny,p)
 importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
 importFrom(shiny,reactiveFileReader)
+importFrom(shiny,reactiveVal)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,renderPlot)
 importFrom(shiny,renderPrint)
@@ -218,6 +219,7 @@ importFrom(shiny,tags)
 importFrom(shiny,textOutput)
 importFrom(shiny,titlePanel)
 importFrom(shiny,uiOutput)
+importFrom(shiny,updateActionButton)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,updateTabsetPanel)
 importFrom(shiny,verbatimTextOutput)
