--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 
 # RStudio files
 .Rproj.user/
+.Rproj.user
+
+# some documentation
+inst/doc
 
 # produced vignettes
 vignettes/*.html
@@ -31,4 +35,4 @@ vignettes/*.pdf
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
-.Rproj.user
+
