--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Description: Create 'shiny' app interfaces for 'SpaDES' models.
 URL:
     http://spades-shiny.predictiveecology.org/,
     https://github.com/PredictiveEcology/SpaDES.shiny
-Date: 2018-02-14
+Date: 2018-02-27
 Version: 0.1.0.9001
 Authors@R: c(
       person("Alex M", "Chubaty", email = "alexander.chubaty@canada.ca",
@@ -30,7 +30,9 @@ Imports:
     DT (>= 0.2),
     gdalUtils,
     ggplot2,
+    googleAuthR,
     googledrive,
+    googleID,
     graphics,
     grDevices,
     leaflet,
@@ -49,6 +51,7 @@ Imports:
     shinyBS,
     shinycssloaders,
     shinydashboard,
+    shinyjs,
     sp,
     SpaDES.core (>= 0.1.0),
     stringi (>= 1.1.3),
@@ -65,6 +68,7 @@ Suggests:
     Rserve,
     testthat (>= 1.0.2)
 Remotes:
+    MarkEdmondson1234/googleID,
     PredictiveEcology/reproducible@development,
     PredictiveEcology/quickPlot@development,
     PredictiveEcology/SpaDES.core@development
