--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,9 +106,10 @@ importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
 importFrom(ggplot2,ggsave)
+importFrom(googleAuthR,Authentication)
+importFrom(googleAuthR,with_shiny)
+importFrom(googleID,get_user_info)
 importFrom(googledrive,as_id)
-importFrom(googledrive,drive_auth)
-importFrom(googledrive,drive_deauth)
 importFrom(grDevices,dev.cur)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -191,6 +192,7 @@ importFrom(shiny,invalidateLater)
 importFrom(shiny,is.reactive)
 importFrom(shiny,isolate)
 importFrom(shiny,mainPanel)
+importFrom(shiny,need)
 importFrom(shiny,numericInput)
 importFrom(shiny,observe)
 importFrom(shiny,observeEvent)
@@ -222,6 +224,7 @@ importFrom(shiny,uiOutput)
 importFrom(shiny,updateActionButton)
 importFrom(shiny,updateSliderInput)
 importFrom(shiny,updateTabsetPanel)
+importFrom(shiny,validate)
 importFrom(shiny,verbatimTextOutput)
 importFrom(shiny,wellPanel)
 importFrom(shiny,withProgress)
@@ -229,6 +232,9 @@ importFrom(shinyBS,bsModal)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinydashboard,box)
 importFrom(shinydashboard,tabBox)
+importFrom(shinyjs,onclick)
+importFrom(shinyjs,runjs)
+importFrom(shinyjs,useShinyjs)
 importFrom(sp,SpatialPoints)
 importFrom(sp,spTransform)
 importFrom(stats,time)
