--- a/inst/templates/ui.R.template
+++ b/inst/templates/ui.R.template
@@ -14,6 +14,7 @@ dashboardPage(
     sidebarFooterUI("sidebar")
   ),
   dashboardBody(
+    useShinyjs(),
     tabItems(
       {{{tabItems}}}
     ),
