--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,8 @@ export(slicer)
 export(slicerUI)
 export(slider)
 export(sliderUI)
+export(spades_expt)
+export(spades_simInit)
 export(summaryPopups)
 export(tilesUpdater)
 export(timeSeriesofRasters)
@@ -85,19 +87,22 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(SpaDES.core,"end<-")
 importFrom(SpaDES.core,"params<-")
 importFrom(SpaDES.core,"time<-")
+importFrom(SpaDES.core,cachePath)
 importFrom(SpaDES.core,completed)
 importFrom(SpaDES.core,depends)
 importFrom(SpaDES.core,end)
 importFrom(SpaDES.core,eventDiagram)
-importFrom(SpaDES.core,getPaths)
+importFrom(SpaDES.core,experiment)
 importFrom(SpaDES.core,inputs)
 importFrom(SpaDES.core,moduleDiagram)
 importFrom(SpaDES.core,modulePath)
 importFrom(SpaDES.core,modules)
 importFrom(SpaDES.core,objectDiagram)
 importFrom(SpaDES.core,objs)
+importFrom(SpaDES.core,outputPath)
 importFrom(SpaDES.core,paddedFloatToChar)
 importFrom(SpaDES.core,params)
+importFrom(SpaDES.core,simInit)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(archivist,addTagsRepo)
@@ -149,6 +154,7 @@ importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,rePlot)
 importFrom(raster,cellFromXY)
 importFrom(raster,crs)
+importFrom(raster,endCluster)
 importFrom(raster,extract)
 importFrom(raster,filename)
 importFrom(raster,hist)
@@ -164,6 +170,7 @@ importFrom(raster,ymax)
 importFrom(raster,ymin)
 importFrom(rasterVis,levelplot)
 importFrom(reproducible,Cache)
+importFrom(reproducible,Copy)
 importFrom(reproducible,asPath)
 importFrom(reproducible,checkPath)
 importFrom(shiny,HTML)
