--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(SpaDES.core,simInit)
 importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(archivist,addTagsRepo)
+importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
 importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_translate)
