--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,8 @@ importFrom(SpaDES.core,spades)
 importFrom(SpaDES.core,start)
 importFrom(assertthat,assert_that)
 importFrom(data.table,data.table)
+importFrom(data.table,is.data.table)
+importFrom(data.table,setkeyv)
 importFrom(dplyr,filter)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
