--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ URL:
 Date: 2018-03-20
 Version: 0.1.0.9001
 Authors@R: c(
-      person("Alex M", "Chubaty", email = "alexander.chubaty@canada.ca",
+      person("Alex M", "Chubaty", email = "alex.chubaty@gmail.com",
              role = c("aut", "cre")),
       person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
              role = c("aut")),
