--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(pkgDeps)
 export(pkgInformation)
 export(pkgInformationUI)
 export(pkgVers)
+export(polygonChooser)
+export(polygonChooserUI)
 export(polygonsUpdater)
 export(rastersOverTime)
 export(rastersOverTimeUI)
