export proj4stringLFLT

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(pkgVers)
 export(polygonChooser)
 export(polygonChooserUI)
 export(polygonsUpdater)
+export(proj4stringLFLT)
 export(rastersOverTime)
 export(rastersOverTimeUI)
 export(readConfig)
