--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(data.table,setkeyv)
 importFrom(dplyr,filter)
+importFrom(gdalUtils,gdal_setInstallation)
 importFrom(gdalUtils,gdal_translate)
 importFrom(gdalUtils,gdaldem)
 importFrom(ggplot2,ggsave)
@@ -160,6 +161,7 @@ importFrom(raster,extract)
 importFrom(raster,filename)
 importFrom(raster,hist)
 importFrom(raster,maxValue)
+importFrom(raster,minValue)
 importFrom(raster,ncell)
 importFrom(raster,res)
 importFrom(raster,rowColFromCell)
