cleanup for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ importFrom(leaflet,clearGroup)
 importFrom(leaflet,clearPopups)
 importFrom(leaflet,colorFactor)
 importFrom(leaflet,easyButton)
+importFrom(leaflet,fitBounds)
 importFrom(leaflet,layersControlOptions)
 importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOptions)
